--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Kollektif';
-  src: url('https://unifierhq.org/assets/Kollektif.ttf') format('truetype');
+  src: url('Kollektif.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
